--- a/sass/components/_package.sass
+++ b/sass/components/_package.sass
@@ -1,10 +1,12 @@
 .section-package
-    padding: 8rem 0
+    padding: 5rem 0
     position: relative
     &__btn
         text-align: center
     &__title
         text-align: center
+
+
 
 .bg-gradient
     position: absolute
@@ -27,10 +29,11 @@
     width: 80%
     background: rgba(255, 255, 255, 0.8)
     box-shadow: $box-shadow
-    padding: 6rem
+    padding: 5rem
     display: flex
     align-items: center
-    margin-bottom: 8rem
+    margin-bottom: 5rem
+    border-radius: .5rem
     &__img
         width: 20rem
         height: 20rem
