--- a/sass/abstracts/_variable.sass
+++ b/sass/abstracts/_variable.sass
@@ -1,6 +1,6 @@
 $color-white: #FFFFFF
 $color-grey: #777777
 $color-black: #000000
-$color-red: #dc2a1c
-$color-yellow: #ffdb0d
+$color-red: #f42917
+$color-yellow: #fbd809
 $box-shadow: (0px 4px 4px rgba(0, 0, 0, 0.3))
