--- a/sass/style.sass
+++ b/sass/style.sass
@@ -9,6 +9,7 @@
 @import "components/buttons.sass"
 @import "components/product.sass"
 @import "components/package.sass"
+@import "components/deliverys.sass"
 
 @import "layout/header.sass"
 @import "layout/footer.sass"
