--- a/sass/style.sass
+++ b/sass/style.sass
@@ -10,6 +10,8 @@
 @import "components/product.sass"
 @import "components/package.sass"
 @import "components/deliverys.sass"
+@import "components/aboutUs.sass"
+@import "components/connections.sass"
 
 @import "layout/header.sass"
 @import "layout/footer.sass"
