day third add nekst

--- a/sass/components/_connections.sass
+++ b/sass/components/_connections.sass
@@ -1,5 +1,5 @@
 .section-connection
-    padding: 6rem 0
+    padding: 6rem 5rem
     &__box
         background: linear-gradient(100deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 56%, rgba(0, 0, 0, 0.4) 56%, rgba(255, 255, 255, 0.4) 100%), url(../img/connection.jpg) right / cover no-repeat
         border-radius: .5rem
