--- a/sass/components/_aboutUs.sass
+++ b/sass/components/_aboutUs.sass
@@ -1,8 +1,1 @@
-.section-aboutUs
-    padding: 6rem 0
-    background: #fffef7
-    &__title
-        text-align: center
-    &__btn
-        padding-top: 5rem
-        text-align: center
+// .section-aboutUs
