--- a/sass/components/_connections.sass
+++ b/sass/components/_connections.sass
@@ -9,8 +9,7 @@
         justify-content: space-between
     &__address
         width: 50%
-        padding-top: 5rem
-        padding-left: 3rem
+        padding: 3rem 0 0 3rem
 
 .form
     width: 80%
