--- a/sass/components/_deliverys.sass
+++ b/sass/components/_deliverys.sass
@@ -5,6 +5,8 @@
     &__wrapper
         display: flex
         justify-content: space-between
+        @include respond(tab-land)
+            padding: 0 5rem
     &__left
         width: 50%
     &__right
