--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -5,6 +5,14 @@
 
 html
     font-size: 62.5%
+    @include respond(tab-land)
+        font-size: 56.25%
+    @include respond(tab-port)
+        font-size: 50%
+    @include respond(phone)
+        font-size: 30%
+    @include respond(big-screen)
+        font-size: 75%
 
 body
     font-family: "MontseratT", sans-serif
@@ -18,4 +26,3 @@ body
     position: relative
     max-width: 144rem
     margin: 0 auto
-
