--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -27,4 +27,6 @@ body
     max-width: 144rem
     margin: 0 auto
     @include respond(tab-land)
-        max-width: 130rem
+        max-width: 100rem
+    @include respond(tab-port)
+        max-width: 90rem
