--- a/sass/components/_connections.sass
+++ b/sass/components/_connections.sass
@@ -7,14 +7,26 @@
         overflow: hidden
         display: flex
         justify-content: space-between
+        @include respond(tab-port)
+            flex-wrap: wrap
+            justify-content: center
+            width: 100%
+            background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0.03%, rgba(255, 255, 255, 0.5) 99.94%), url(../img/connection.jpg) right / cover no-repeat
     &__address
         width: 50%
-        padding: 5rem 0 0 3rem
+        padding: 5rem 0 0 1rem
+        @include respond(tab-port)
+            width: 100%
+            padding: 0
 
 .form
     width: 80%
     padding-top: 3rem
     padding-left: 3rem
+    @include respond(tab-port)
+        padding-left: 0
+        width: 100%
+        text-align: center
     &__group:not(:last-child)
         margin-bottom: 1.7rem
     &__group:last-child
@@ -31,7 +43,7 @@
         border-radius: .5rem
         width: 70%
         &-3
-            height: 15rem
+            height: 10rem
     &__input:focus
         outline: none
         border-bottom: .2rem solid #66D763
@@ -53,10 +65,12 @@
 
 .stavropol, .svetlograd
     width: 85%
-    padding: 3rem 2rem
+    padding: 2rem 1rem
     border-radius: .5rem
     background: $color-white
     margin-bottom: 2rem
+    @include respond(tab-port)
+        margin: 2rem auto
     &-title
         font-size: 2.6rem
         margin-bottom: 1.6rem
