--- a/sass/components/_deliverys.sass
+++ b/sass/components/_deliverys.sass
@@ -7,14 +7,22 @@
         justify-content: space-between
         @include respond(tab-land)
             padding: 0 5rem
+        @include respond(tab-port)
+            flex-wrap: wrap
     &__left
         width: 50%
+        @include respond(tab-port)
+            width: 100%
     &__right
         width: 50%
         position: relative
+        @include respond(tab-port)
+            width: 100%
     &__btn
         text-align: center
         padding-top: 3rem
+        @include respond(tab-port)
+            padding-top: 55rem
 
 
 .left
@@ -29,13 +37,13 @@
 
 .right-img
     position: absolute
-    width: 50%
+    width: 55%
     box-shadow: $box-shadow
     border-radius: .5rem
     outline-offset: .9rem
     transition: all .3s
     &:hover
-        transform: scale(1.5)
+        transform: scale(1.3)
         outline: .3rem solid $color-yellow
         z-index: 10
     &__1
@@ -44,9 +52,9 @@
         z-index: 5
     &__2
         top: 8rem
-        right: 12rem
+        right: 10rem
         z-index: 6
     &__3
-        top: 18rem
-        left: 8rem
+        top: 20rem
+        left: 7rem
         z-index: 7
