--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -12,3 +12,7 @@
         margin-right: 3rem
     &__list-link
         color: $color-white
+        @include respond(tab-port)
+            font-size: 1.4rem
+        @include respond(phone)
+            font-size: 1.2rem
