--- a/sass/components/_deliverys.sass
+++ b/sass/components/_deliverys.sass
@@ -8,7 +8,7 @@
         @include respond(tab-land)
             padding: 0 5rem
         @include respond(tab-port)
-            flex-wrap: wrap
+            flex-direction: column
     &__left
         width: 50%
         @include respond(tab-port)
