--- a/sass/components/_connections.sass
+++ b/sass/components/_connections.sass
@@ -8,7 +8,7 @@
         display: flex
         justify-content: space-between
         @include respond(tab-port)
-            flex-wrap: wrap
+            flex-direction: column
             justify-content: center
             width: 100%
             background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0.03%, rgba(255, 255, 255, 0.5) 99.94%), url(../img/connection.jpg) right / cover no-repeat
