--- a/sass/components/_product.sass
+++ b/sass/components/_product.sass
@@ -24,7 +24,7 @@
     justify-content: space-between
     margin-bottom: 8rem
     @include respond(tab-port)
-        display: inline-block
+        flex-direction: column
         width: 100%
         margin-bottom: 3rem
     &__box
