--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -2,9 +2,9 @@
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0.03%, rgba(255, 255, 255, 0.5) 99.94%), url(../img/header.jpg) center / cover no-repeat
     height: 100vh
     position: relative
-    background-attachment: fixed
+    // background-attachment: fixed
     @include respond(tab-port)
-        // background-attachment: local
+        background-attachment: local
 
     &__menu
         display: flex
@@ -12,6 +12,11 @@
         align-items: center
         justify-content: space-between
         padding-top: 2rem
+    &__logo
+        img
+            @include respond(tab-port)
+                width: 60%
+                height: 60%
     &__box
         position: absolute
         top: 50%
@@ -55,15 +60,31 @@
 
 .nav-menu
     @include respond(tab-port)
-        display: none
+        position: fixed
+        top: 0
+        right: -100%
+        height: 100vh
+        width: 50%
+        background: $color-grey
+        z-index: 10
+        opacity: .9
+        transition: all .5s
     &__list
         list-style: none
         display: flex
         flex-direction: row
+        @include respond(tab-port)
+            flex-direction: column
+            justify-content: space-evenly
+            align-items: center
+            height: 100%
         &-item
             margin-right: 1.6rem
             @include respond(tab-land)
                 margin-right: .3rem
+            @include respond(tab-port)
+                margin-right: 0
+                font-size: 2.6rem
             &:last-child
                 margin-right: 0rem
         &-link
