--- a/sass/base/_base.sass
+++ b/sass/base/_base.sass
@@ -30,3 +30,5 @@ body
         max-width: 120rem
     @include respond(tab-port)
         max-width: 90rem
+    @include respond(phone)
+        max-width: 60rem
