--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -2,7 +2,7 @@
     background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0.03%, rgba(255, 255, 255, 0.5) 99.94%), url(../img/header.jpg) center / cover no-repeat
     height: 100vh
     position: relative
-    // background-attachment: fixed
+    background-attachment: fixed
     @include respond(tab-port)
         background-attachment: local
 
