--- a/sass/components/_package.sass
+++ b/sass/components/_package.sass
@@ -35,6 +35,7 @@
     margin-bottom: 5rem
     border-radius: .5rem
     @include respond(tab-port)
+        width: 90%
         flex-direction: column
         justify-content: center
         padding: 2rem
