--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -1,6 +1,8 @@
 .footer
     height: 7rem
     background: $color-black
+    @include respond(phone)
+        height: 15rem
 .footer__nav
     height: 100%
     display: flex
@@ -12,9 +14,16 @@
         list-style: none
         display: flex
         justify-content: space-between
+        @include respond(phone)
+            flex-wrap: wrap
+            justify-content: center
     &__list-item
         margin-right: 3rem
         &:last-child
+            margin-right: 0
+        @include respond(phone)
+            padding: 1rem 2rem
+        @include respond(phone)
             margin-right: 0
     &__list-link
         text-decoration: none
@@ -23,4 +32,5 @@
         @include respond(tab-port)
             font-size: 1.4rem
         @include respond(phone)
-            font-size: 1.2rem
+            font-size: 1rem
+            padding: 0
