--- a/sass/components/_connections.sass
+++ b/sass/components/_connections.sass
@@ -7,17 +7,20 @@
         overflow: hidden
         display: flex
         justify-content: space-between
+        align-items: center
         @include respond(tab-port)
             flex-direction: column
             justify-content: center
             width: 100%
             background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0.03%, rgba(255, 255, 255, 0.5) 99.94%), url(../img/connection.jpg) right / cover no-repeat
     &__address
-        width: 50%
+        width: 52%
         padding: 5rem 0 0 1rem
         @include respond(tab-port)
-            width: 100%
+            width: 82%
             padding: 0
+        @include respond(phone)
+            width: 100%
 
 .form
     width: 80%
@@ -64,13 +67,16 @@
         transform: translateY(-3.5rem)
 
 .stavropol, .svetlograd
-    width: 85%
+    width: 90%
     padding: 2rem 1rem
     border-radius: .5rem
     background: $color-white
     margin-bottom: 2rem
     @include respond(tab-port)
         margin: 2rem auto
+        width: 86%
+    @include respond(phone)
+        width: 95%
     &-title
         font-size: 2.6rem
         margin-bottom: 1.6rem
